@@ -88,9 +88,10 @@ let busy_level4 = ref 8
 (* First day of the week? *)
 let week_starts_monday = ref false
 (* 12/24 hour time selection *)
-let schedule_12_hour  = ref false
-let selection_12_hour = ref true
-let status_12_hour    = ref true
+let schedule_12_hour    = ref false
+let selection_12_hour   = ref true
+let status_12_hour      = ref true
+let description_12_hour = ref true
 (* List of included rc files *)
 let included_rcfiles : (string list) ref = ref []
 
@@ -460,6 +461,8 @@ let parse_line line_stream =
          parse_set "selection_12_hour" selection_12_hour bool_of_string "Expected a boolean string after "
       | [< 'Ident "status_12_hour" >] ->
          parse_set "status_12_hour" status_12_hour bool_of_string "Expected a boolean string after "
+      | [< 'Ident "description_12_hour" >] ->
+         parse_set "description_12_hour" description_12_hour bool_of_string "Expected a boolean string after "
       | [< >] ->
          config_failwith ("Unmatched variable name after \"set\"")
       end
